# ZIA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _coverpage.md  conanfile.txt  config.xml  configuration.md  modules.md  package.json  start.sh
Modules/PHPModule/: CMakeLists.txt
Modules/PHPModule/srcs/: PHPModule.cpp  PHPModule.hpp
Modules/incs/: PHPModule.hpp
docs/: README.md  _coverpage.md  _sidebar.md  build-start.md  configuration.md  index.html  modules.md
docs/assets/: style.css
incs/: ArgsParser.hpp  AssemblesAnswer.hpp  Cmd.hpp  LoadModules.hpp  ParseRequest.hpp  RequestsHandler.hpp  Server.hpp  ServerClient.hpp  Zia.hpp
modules/DEBUGModule/: CMakeLists.txt  DEBUGModule.hpp  DEBUGRequestHandler.hpp  factory.cpp
modules/PHPModule/: CMakeLists.txt  PHPModule.hpp  PHPRequestHandler.hpp  factory.cpp
modules/SSLModule/: CMakeLists.txt  SSLModule.hpp  SSLRequestHandler.hpp  factory.cpp
modules/SSLModule/files/: cert.crt  private.key
modules/StaticModule/: CMakeLists.txt  StaticModule.hpp  StaticRequestHandler.hpp  factory.cpp
srcs/: ArgsParser.cpp  AssemblesAnswer.cpp  Cmd.cpp  LoadModules.cpp  ParseRequest.cpp  RequestsHandler.cpp  Server.cpp  ServerClient.cpp  Zia.cpp  main.cpp
